--- a/dashboard.html
+++ b/dashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/dashboard.css">
-    <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="/public/css/index.css">
+    <link rel="stylesheet" href="/public/css/global.css">
+    <link rel="stylesheet" href="/public/css/dashboard.css">
+    <link rel="icon" href="/public/static/logo.svg" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.0/lame.min.js"></script>
 
@@ -31,7 +31,7 @@
             <button id="startButton" class="start-btn" onclick="init()" style="display: none !important;">Start</button>
         </div> -->
         <div class="container">
-            <button id="start_affirmation" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
+            <button id="start_onboarding" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
             <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Start Conversation</button>
             <!-- <button id="" class="btn" onclick="logout()">logout</button> -->
             <!-- <select class="dropdown">
@@ -52,8 +52,8 @@
     </div>
 
 </body>
-<script src="js/dashboard.js"></script>
-<script src="js/index.js"></script>
+<script src="/public/js/dashboard.js"></script>
+<script src="/public/js/index.js"></script>
 <script>
 
 </script>
