--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
-  <link rel="stylesheet" href="public/css/index.css">
-  <link rel="stylesheet" href="public/css/global.css">
+  <link rel="stylesheet" href="/public/css/index.css">
+  <link rel="stylesheet" href="/public/css/global.css">
   <!-- add icon link -->
-  <link rel="icon" href="static/logo.svg" type="image/x-icon" />
+  <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
 </head>
 
 <body>
   <div id="loader-container"></div>
   <div class="login-container" class="animationFadein" style="display:none;">
     <div class="logo">
-      <img src="static/logo.svg" alt="Logo">
+      <img src="/static/logo.svg" alt="Logo">
     </div>
     <form class="login-form" onsubmit="redirectToWelcome(event)">
       <div class="form-group">
@@ -34,7 +34,7 @@
   </div>
 
 </body>
-<script src="public/js/loader.js"></script>
-<script src="public/js/index.js"></script>
+<script src="/public/js/loader.js"></script>
+<script src="/public/js/index.js"></script>
 
 </html>
