Remove affirmation page and show icon.

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/public/css/index.css">
     <link rel="stylesheet" href="/public/css/global.css">
     <link rel="stylesheet" href="/public/css/dashboard.css">
-    <link rel="icon" href="/public/static/logo.svg" type="image/x-icon" />
+    <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.0/lame.min.js"></script>
 
@@ -53,7 +53,7 @@
 
 </body>
 <script src="/public/js/dashboard.js"></script>
-<script src="/public/js/index.js"></script>
+<!-- <script src="/public/js/index.js"></script> -->
 <script>
 
 </script>
