--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
         </div> -->
         <div class="container">
             <button id="start_onboarding" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
-            <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Start Conversation</button>
+            <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Awakening Conversations</button>
             <!-- <button id="" class="btn" onclick="logout()">logout</button> -->
             <!-- <select class="dropdown">
                 <option value="1">Alloy</option>
