hamburger hidden when loader is showing.

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
     <div id="loader-container"></div>
     
     <!-- Hamburger Menu Button -->
-    <div class="hamburger-menu">
+    <div id="hamburger" class="hamburger-menu" hidden>
         <div class="hamburger-icon" onclick="toggleMenu()">
             <span></span>
             <span></span>
