Major Changes i.e clone voice support and more

--- a/dashboard.html
+++ b/dashboard.html
@@ -62,8 +62,8 @@
             <div class="custom-select">
                 <label for="">Selected Voice: </label>
                 <select id="dropdown">
-                    <option value="dashboard">Alloy</option>
-                    <option value="settings">My Voice</option>
+                    <option value="alloy">Alloy</option>
+                    <option value="clone">Clone</option>
                 </select>
             </div>          
         </div> 
