--- a/dashboard.html
+++ b/dashboard.html
@@ -60,12 +60,14 @@
                 <option value="2">My Voice</option>
             </select> -->
             <div class="custom-select">
-                <label for="">Selected Voice: </label>
-                <select id="dropdown">
-                    <option value="alloy">Alloy</option>
-                    <option value="clone">Clone</option>
+                <label for="voiceSelect">Selected Voice: </label>
+                <select id="voiceSelect">
+                    <!-- <option value="alloy">Alloy</option>
+                    <option value="clone">Clone</option> -->
                 </select>
-            </div>          
+                
+            </div> 
+            <div id="defaultVoiceText" style="font-weight: bold;"></div>         
         </div> 
         <br>       
         <div id="status" class="status"></div>
