--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,10 @@
             <button id="startButton" class="start-btn" onclick="init()" style="display: none !important;">Start</button>
         </div> -->
         <div class="container">
-            <button id="start_onboarding" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
+            <div class="btn-container">
+                <button id="start_onboarding" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
+                <button id="clone_voice" class="btn long-text" onclick="init(this); userclicked(this)">Clone Voice</button>
+            </div>
             <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Awakening Conversations</button>
             <!-- <button id="" class="btn" onclick="logout()">logout</button> -->
             <!-- <select class="dropdown">
