clone-voice.html page added

--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,8 @@
         <div class="container">
             <div class="btn-container">
                 <button id="start_onboarding" class="btn" onclick="init(this); userclicked(this)">Start Onboarding</button>
-                <button id="clone_voice" class="btn long-text" onclick="init(this); userclicked(this)">Clone Voice</button>
+                <!-- Change this line in dashboard.html -->
+                <button id="clone_voice" class="btn long-text" onclick="redirectToCloneVoice()">Clone Voice</button>
             </div>
             <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Awakening Conversations</button>
             <!-- <button id="" class="btn" onclick="logout()">logout</button> -->
