--- a/dashboard.html
+++ b/dashboard.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Welcome</title>
+    <link rel="stylesheet" href="/public/css/dashboard.css">
     <link rel="stylesheet" href="/public/css/index.css">
     <link rel="stylesheet" href="/public/css/global.css">
-    <link rel="stylesheet" href="/public/css/dashboard.css">
+    
     <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.0/lame.min.js"></script>
@@ -63,15 +65,12 @@
                 <option value="1">Alloy</option>
                 <option value="2">My Voice</option>
             </select> -->
+            <!-- Change this in dashboard.html -->
             <div class="custom-select">
                 <label for="voiceSelect">Selected Voice: </label>
-                <select id="voiceSelect">
-                    <!-- <option value="alloy">Alloy</option>
-                    <option value="clone">Clone</option> -->
-                </select>
-                
+                <!-- The select will be created dynamically by JavaScript -->
             </div> 
-            <div id="defaultVoiceText" style="font-weight: bold;"></div>         
+            <!-- <div id="defaultVoiceText" style="font-weight: bold;"></div>    -->
         </div> 
         <br>       
         <div id="status" class="status"></div>
