upload recording updated

--- a/clone-voice.html
+++ b/clone-voice.html
@@ -29,7 +29,14 @@
                 <p class="small-text">Audio files only</p>
             </label>
             <div id="fileName" class="file-name">No file selected</div>
-           
+            <div id="uploadSuccessContainer" class="upload-success-container">
+                <div class="uploaded-audio-container">
+                    <audio controls class="audio-player" id="uploadedAudioPlayer"></audio>
+                    <div class="player-controls">
+                        <button class="trash-btn" id="uploadTrashBtn">🗑️</button>
+                    </div>
+                </div>
+            </div>           
             <div class="divider">
                 <span>or</span>
             </div>
