code updated all the changes

--- a/clone-voice.html
+++ b/clone-voice.html
@@ -83,9 +83,12 @@ Fusce pharetra convallis urna. Quisque ullamcorper placerat ipsum. Cras nibh. Mo
             
             <!-- <button id="backToUploadBtn" class="back-btn">Back to Upload</button> -->
         </div>
-        
+        <div id="processingStatus" style="display:none; margin-bottom: 10px; color: #2e4f2e;">
+            <i class="fa fa-spinner fa-spin"></i> Creating your voice clone...
+          </div>
+
         <div class="action-buttons">
-            <button id="cloneBtn" class="clone-btn" disabled>Clone Voice</button>
+            <button id="cloneBtn" class="clone-btn">Clone Voice</button>
         </div>
         <!-- <div id="status"></div>
         <div id="error"></div>          -->
